--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "aos-animations": "^0.0.7",
+    "axios": "^1.3.4",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
